# alkatto

./: README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
src/agent/: graph.py  state.py
src/agent/analyst_graph/: __init__.py  configuration.py  graph.py  prompts.py  state.py
src/agent/interview_graph/: __init__.py  configuration.py  graph.py  prompts.py  state.py  utils.py
src/agent/interview_graph/financial/: configuration.py  graph.py  prompts.py  state.py
src/agent/interview_graph/general/: configuration.py  graph.py  prompts.py  state.py
src/agent/interview_graph/market/: configuration.py  graph.py  prompts.py  state.py
src/agent/interview_graph/research/: configuration.py  graph.py  prompts.py  state.py
src/shared/: retrieval.py  stock_retriever.py  utils.py
