[project]
name = "alkatto"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.74",
    "langchain-openai>=0.3.6",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.3.19",
    "python-dotenv>=1.0.1",
    "msgspec>=0.19.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pydantic_core>=2.27.2",
    "typing_extensions==4.12.2",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.35",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "arxiv>=2.1.3",
    "langchain-chroma>=0.2.2",
    "pypdf>=5.3.0",
    "langchain-community>=0.3.17",
    "PyMuPDF>=1.22.5,<1.25.0"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent", "shared"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"
"shared" = "src/shared"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
